Add basic map support
Add first annotation (@Unsigned) and split project
into annotations and bcc module.